Remove 'expression' as a date type and make it a field parallel to the other date_types. Date 'expression' is optional, but if provided, a date_type becomes optional. Fix linked records throwing an exception if 'ref' was nil.  Also refactored the linker widget to set an ID on the element, to support error messages.

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -38,6 +38,17 @@ fieldset {
   padding-top: 6px;
 }
 
+.inline-subform {
+  margin: 4px 0;
+  border-top: 1px solid #E5E5E5;
+  background-color: #fafafa;
+  border-bottom: 1px solid #E5E5E5;
+}
+
+.control-group .inline-subform {
+  margin-left: -180px;
+}
+
 /* identifier fields */
 .identifier-fields input {
   width: auto;
