--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -29,6 +29,10 @@ ul.token-input-list {
   }
 }
 
+.control-group.error ul.token-input-list {
+  border-color: #ee5f5b;
+}
+
 .input-append ul.token-input-list  {
   .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
 }
