--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -12,6 +12,7 @@
   <div class="controls">
     <div class="input-append linker-wrapper">
       <input type="text" class="linker"
+             id="<%= form.id_for("ref") %>"
              data-object_class="<%= form.obj["jsonmodel_type"] %>"
              data-controller="agents"
              data-label="Agent"
