--- a/frontend/app/views/collection_management_records/_record_linker.html.erb
+++ b/frontend/app/views/collection_management_records/_record_linker.html.erb
@@ -12,6 +12,7 @@
   <div class="controls">
     <div class="linker-wrapper">
       <input type="text" class="linker"
+             id="<%= form.id_for("ref") %>"
              data-object_class="<%= form.obj["jsonmodel_type"] %>"
              data-controller="collection_management_records"
              data-label="Records"
