--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -3,7 +3,8 @@
    <label class="control-label">Subjects</label>
    <div class="controls">
        <div class="input-append linker-wrapper">
-          <input type="text" class="linker" 
+          <input type="text" class="linker"
+            id="<%= form.id_for("subjects") %>"
             data-object_class="subject" 
             data-controller="subjects" 
             data-label="Subject"
