--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -1,4 +1,5 @@
 <div class="form-messages">
+<% puts @exceptions.inspect %>
 <% if @exceptions %>
    <script>
      $(function () {
@@ -23,7 +24,7 @@
        };
 
        var _errors = <%= form.exceptions_for_js(@exceptions) %>;
-
+        console.log(_errors);
        var callback = function () {
          if (_errors.errors) {
            $(_errors.errors).each(function (idx, elt) {
