Add ability to sort tokens if settings.sortable == true and settings.multiplicity == 'many'

--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -238,6 +238,19 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   }
 }
 
+.linker-wrapper.sortable {
+  .token-input-token {
+    cursor: pointer;
+  }
+
+  .sortable-placeholder {
+    height: @baseLineHeight;
+    border: 1px dashed #CCC;
+    padding: 2px;
+    margin: 4px;
+    .border-radius(@inputBorderRadius);
+  }
+}
 .token-list {
   margin:0;
   > li {
