--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -14,6 +14,7 @@
             data-url="<%= url_for :controller => :subjects, :action => :list, :format => :json %>" 
             data-selected='<%= form.obj['subjects'].blank? ? "[]" : form.obj['resolved']['subjects'].collect {|s| Subject.from_hash(s)}.to_json %>'
             data-format_property="display_string"
+            data-sortable="true"
           />
           <div class="btn-group">
              <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
