--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -8,6 +8,7 @@
      <%= form.label_and_date "accession_date", {:field_opts => {:value => (@accession.accession_date.blank? ? "" : Date.strptime(@accession.accession_date, "%Y-%m-%d"))}} %>
      <%= form.label_and_textarea "content_description" %>
      <%= form.label_and_textarea "condition_description" %>
+     <%= form.label_and_select "language", form.options_for("language", JSONModel(:accession).schema['properties']['language']['enum']) %>
      <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </fieldset>
 </section>
