--- a/frontend/app/views/archival_objects/display/_basic_information.html.erb
+++ b/frontend/app/views/archival_objects/display/_basic_information.html.erb
@@ -6,6 +6,12 @@
    <div class="span3">Ref ID</div>
    <div class="span9"><span class="identifier-display-part"><%= @archival_object.ref_id %></span></div>
 </div>
+<% if not @archival_object.language.blank? %>
+<div class="row-fluid label-and-value">
+  <div class="span3">Language</div>
+  <div class="span9"><%= I18n.t("archival_object.language_#{@archival_object.language}") %></div>
+</div>
+<% end %>
 <% if not @archival_object.subjects.blank? %>
 <hr/>
 <div class="row-fluid label-and-value">
