--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -16,7 +16,7 @@
     <%= form.label_and_textfield "title" %>
     <%= form.label_and_textfield "component_id" %>
     <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:digital_object_component, "publish")["default"] %>
-    <%= form.label_and_textfield "language" %>
+    <%= form.label_and_select "language", form.jsonmodel_options_for(:digital_object_component, "language", true) %>
 
     <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
