--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -21,7 +21,7 @@
         <%= readonly.label_and_textfield "title" %>
         <%= readonly.label_and_textfield "component_id" %>
         <%= readonly.label_and_boolean "publish" %>
-        <%= readonly.label_and_textfield "language" %>
+        <%= readonly.label_and_select "language", readonly.jsonmodel_options_for(:digital_object_component, "language") %>
 
         <% if not @digital_object_component.subjects.blank? %>
           <hr/>
