--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -12,7 +12,7 @@
     <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:digital_object, "publish")["default"] %>
     <%= form.label_and_select "level", form.jsonmodel_options_for(:digital_object, "level") %>
     <%= form.label_and_select "digital_object_type", form.jsonmodel_options_for(:digital_object, "digital_object_type") %>
-    <%= form.label_and_textfield "language" %>
+    <%= form.label_and_select "language", form.jsonmodel_options_for(:digital_object, "language", true) %>
     <%= form.label_and_boolean "restrictions", {}, form.jsonmodel_schema_definition(:digital_object, "restrictions")["default"] %>
     <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
