--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -18,7 +18,7 @@
         <%= readonly.label_and_boolean "publish" %>
         <%= readonly.label_and_select "level", readonly.jsonmodel_options_for(:digital_object, "level") %>
         <%= readonly.label_and_select "digital_object_type", readonly.jsonmodel_options_for(:digital_object, "digital_object_type") %>
-        <%= readonly.label_and_textfield "language" %>
+        <%= readonly.label_and_select "language", readonly.jsonmodel_options_for(:digital_object, "language") %>
         <%= readonly.label_and_boolean "restrictions" %>
 
          <% if not @digital_object.subjects.blank? %>
