--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -27,6 +27,11 @@
          </div>
         <% end %>
 
+        <div class="row-fluid label-and-value">
+          <div class="span3">Language</div>
+          <div class="span9"><%= I18n.t("resource.language_#{@resource.language}") %></div>
+        </div>
+
          <% if not @resource.subjects.blank? %>
          <hr/>
          <div class="row-fluid label-and-value">
