--- a/frontend/app/views/resources/forms/_basic_information.html.erb
+++ b/frontend/app/views/resources/forms/_basic_information.html.erb
@@ -1,3 +1,4 @@
 <%= form.label_and_textfield "title" %>
 <%= form.label_and_fourpartid %>
+<%= form.label_and_select "language", form.jsonmodel_options_for(:resource, "language", true) %>
 <%= render :partial => "subjects/linker", :locals => { :form => form }%>
