Clean up resource and AO read only views; use readonly form helper to retain consistent l&f between forms and readonly views; refactor subject readonly view into a template;

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -99,8 +99,13 @@ h2 > .label {
     margin-right: 4px;
     min-width: 60px;
     float: left;
-    height: 1.2em;
+    height: @baseLineHeight;
+    line-height: @baseLineHeight;
   }
+}
+
+.label-only .identifier-display-part {
+  margin-top: -6px;
 }
 
 .tab-content {
