--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -12,7 +12,16 @@
 
   <section id="basic_information">
     <h3>Basic Information</h3>
-    <%= render :partial => "archival_objects/forms/basic_information", :locals => {:form => form} %>
+
+    <%= form.label_and_textfield "title" %>
+    <% if form.obj["ref_id"].blank? %>
+      <%= form.label_and_readonly "ref_id", "<em>-- auto-generated upon save --</em>" %>
+    <% else %>
+      <%= form.label_with_field "ref_id", "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["ref_id"]}</span></span>".html_safe %>
+    <% end %>
+    <%= form.hidden_input "ref_id" %>
+    <%= form.label_and_select "language", form.jsonmodel_options_for(:archival_object, "language", true) %>
+    <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "archival_object_linked_agent"} %>
