--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -25,16 +25,7 @@
 
         <% if not @digital_object_component.subjects.blank? %>
           <hr/>
-          <div class="row-fluid label-and-value">
-            <div class="span3">Subjects</div>
-            <div class="span9">
-              <% @digital_object_component["resolved"]["subjects"].each do | subject | %>
-                <div class="token">
-                  <%= Subject.from_hash(subject).display_string %>
-                </div>
-              <% end %>
-            </div>
-          </div>
+          <%= render :partial => "subjects/show", :locals => {:subjects => @digital_object_component["resolved"]["subjects"]} %>
         <% end %>
 
       </section>
