--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -32,6 +32,12 @@ fieldset {
   }
 }
 
+form .control-group.required {
+  .control-label {
+    font-weight: bold;
+  }
+}
+
 .control-group.active {
   border-radius: 4px;
   background-color: #fafcff;
