--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#finding_aid">Finding Aid <span class="icon-chevron-right"></span></a></li>
 
     <% if controller.action_name != "show" || @resource.linked_agents.length > 0 %>
       <li><a href="#resource_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
