--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -10,11 +10,40 @@
 
     <%= form.label_and_textfield "title" %>
     <%= form.label_and_fourpartid %>
+    <%= form.label_and_select "level", form.jsonmodel_options_for(:resource, "level", true) %>
+    <%= form.label_and_textfield "other_level" %>
     <%= form.label_and_select "language", form.jsonmodel_options_for(:resource, "language", true) %>
+    <%= form.label_and_textarea "container_summary" %>
+    <%= form.label_and_boolean "publish", {}, form.jsonmodel_schema_definition(:resource, "publish")["default"] %>
+    <%= form.label_and_boolean "restrictions", {}, form.jsonmodel_schema_definition(:resource, "restrictions")["default"] %>
+    <%= form.label_and_textarea "repository_processing_note" %>
+    <hr/>
+    <%= form.label_and_textfield "ead_id" %>
+    <%= form.label_and_textfield "ead_location" %>
     <%= render :partial => "subjects/linker", :locals => { :form => form }%>
 
   </section>
 
+  <section id="finding_aid" class="subrecord-form-dummy">
+    <h3>Finding Aid</h3>
+    <div class="subrecord-form-container">
+      <div class="subrecord-form-fields">
+        <%= form.label_and_textfield "finding_aid_title" %>
+        <%= form.label_and_textfield "finding_aid_filing_title" %>
+        <%= form.label_and_textfield "finding_aid_date" %>
+        <%= form.label_and_textfield "finding_aid_author" %>
+        <%= form.label_and_select "finding_aid_description_rules", form.jsonmodel_options_for(:resource, "finding_aid_description_rules", true) %>
+        <%= form.label_and_textfield "finding_aid_language" %>
+        <%= form.label_and_textfield "finding_aid_sponsor" %>
+        <%= form.label_and_textarea "finding_aid_edition_statement" %>
+        <%= form.label_and_textarea "finding_aid_series_statement" %>
+        <%= form.label_and_textfield "finding_aid_revision_date" %>
+        <%= form.label_and_textarea "finding_aid_revision_description" %>
+        <%= form.label_and_select "finding_aid_status", form.jsonmodel_options_for(:resource, "finding_aid_status", true) %>
+        <%= form.label_and_textarea "finding_aid_note" %>
+      </div>
+    </div>
+  </section>
 
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "resource_linked_agent"} %>
   <%= render :partial => "notes/form", :locals => {:form => form} %>
