--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -15,17 +15,46 @@
         <h3>Basic Information</h3>
 
         <%= readonly.label_and_textfield "title" %>
-
-        <% if @resource.id_0 %>
-          <%= readonly.label_and_fourpartid %>
-        <% end %>
-
+        <% if @resource.id_0 %><%= readonly.label_and_fourpartid %><% end %>
+        <%= readonly.label_and_select "level", readonly.jsonmodel_options_for(:resource, "level", true) %>
+        <%= readonly.label_and_textfield "other_level" %>
         <%= readonly.label_and_select "language", readonly.jsonmodel_options_for(:resource, "language", true) %>
+        <%= readonly.label_and_textarea "container_summary" %>
+        <%= readonly.label_and_boolean "publish" %>
+        <%= readonly.label_and_boolean "restrictions" %>
+        <%= readonly.label_and_textarea "repository_processing_note" %>
+
+        <% if @resource.ead_id or @resource.ead_location %>
+          <hr/>
+          <%= readonly.label_and_textfield "ead_id" %>
+          <%= readonly.label_and_textfield "ead_location" %>
+        <% end %>
 
         <% if not @resource.subjects.blank? %>
           <hr/>
           <%= render :partial => "subjects/show", :locals => {:subjects => @resource["resolved"]["subjects"]} %>
         <% end %>
+      </section>
+
+      <section id="finding_aid" class="subrecord-form-dummy">
+        <h3>Finding Aid</h3>
+        <div class="subrecord-form-container">
+          <div class="subrecord-form-fields">
+            <%= readonly.label_and_textfield "finding_aid_title" %>
+            <%= readonly.label_and_textfield "finding_aid_filing_title" %>
+            <%= readonly.label_and_textfield "finding_aid_date" %>
+            <%= readonly.label_and_textfield "finding_aid_author" %>
+            <%= readonly.label_and_select "finding_aid_description_rules", readonly.jsonmodel_options_for(:resource, "finding_aid_description_rules", true) %>
+            <%= readonly.label_and_textfield "finding_aid_language" %>
+            <%= readonly.label_and_textfield "finding_aid_sponsor" %>
+            <%= readonly.label_and_textarea "finding_aid_edition_statement" %>
+            <%= readonly.label_and_textarea "finding_aid_series_statement" %>
+            <%= readonly.label_and_textfield "finding_aid_revision_date" %>
+            <%= readonly.label_and_textarea "finding_aid_revision_description" %>
+            <%= readonly.label_and_select "finding_aid_status", readonly.jsonmodel_options_for(:resource, "finding_aid_status", true) %>
+            <%= readonly.label_and_textarea "finding_aid_note" %>
+          </div>
+        </div>
       </section>
 
       <% if @resource.linked_agents.length > 0 %>
