--- a/frontend/app/views/resources/new.html.erb
+++ b/frontend/app/views/resources/new.html.erb
@@ -1,6 +1,6 @@
 <%= setup_context :object => @resource %>
 
-<%= form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "resource_form"} do |f| %>
   <%= form_context :resource, @resource.to_hash(true) do |form| %>
     <div class="row-fluid">
        <div class="span3">
