Pass the related_accession through as a hidden input when spawning a resource from an accession.

--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -4,6 +4,8 @@
 
 <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
+<%= form.hidden_input "related_accession" %>
+
 <fieldset>
   <section id="basic_information">
     <h3>Basic Information</h3>
