--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -20,6 +20,8 @@
       <%= form.label_with_field "ref_id", "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["ref_id"]}</span></span>".html_safe %>
     <% end %>
     <%= form.hidden_input "ref_id" %>
+    <%= form.label_and_select "level", form.jsonmodel_options_for(:archival_object, "level", true) %>
+    <%= form.label_and_textfield "other_level" %>
     <%= form.label_and_select "language", form.jsonmodel_options_for(:archival_object, "language", true) %>
     <%= render :partial => "subjects/linker", :locals => { :form => form }%>
   </section>
