Fix saving of spawned Resource resulting in _undefined hash in URL; Saving an accession directs straight to the edit view to allow spawn etc;

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -98,7 +98,9 @@
       overflow: auto;
     }
   }
-
+  .ui-resizable-handle {
+    z-index: auto !important;
+  }
   .ui-resizable-handle.ui-resizable-s {
     width: 100%;
     position: absolute;
