--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -5,6 +5,7 @@
 <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
 
 <%= form.hidden_input "related_accession" %>
+<%= hidden_field_tag "id", @resource.id %>
 
 <fieldset>
   <section id="basic_information">
