--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -8,11 +8,11 @@
           :label =>  I18n.t("resource._html.singular")
         }
       },
-      :can_link_to => {
-        :resource => {
-          :label =>  I18n.t("resource._html.singular")
-        }
-      }
+      #:can_link_to => {
+      #  :resource => {
+      #    :label =>  I18n.t("resource._html.singular")
+      #  }
+      #}
     },
     :resource => {
       :can_add_child => {
