--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -249,3 +249,30 @@
     </div>
   </div>
 <% end %>
+
+
+<%
+   digital_object_note_types = {}
+   JSONModel(:note_digital_object).schema['properties']['type']['enum'].each do |type|
+     digital_object_note_types[type] = :note_digital_object
+   end
+%>
+
+<% define_template "note_digital_object" do |form| %>
+  <div class="subrecord-form-fields" data-type="note_digital_object">
+    <h4 class="subrecord-form-heading">
+      <% if form.readonly? %>
+        <%= I18n.t("#{form.i18n_for("type")}_#{form.obj["type"]}", :default => form.obj["type"]) %>
+        <span class="label label-info">Digital Object</span>
+      <% else %>
+        Digital Object Note
+      <% end %>
+    </h4>
+    <div class="subrecord-form-container">
+      <%= form.hidden_input(:jsonmodel_type, "note_digital_object") %>
+      <%= form.label_and_textfield("label") %>
+      <%= form.label_and_select("type", digital_object_note_types.keys, :field_opts => {:class => "note-type"}) %>
+      <%= form.label_and_textarea("content", :class => "mixed-content") %>
+    </div>
+  </div>
+<% end %>
