--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -18,10 +18,9 @@
         <h3>Basic Information</h3>
         <%= readonly.label_and_textfield "title" %>
         <%= readonly.label_with_field "ref_id", "<div class='identifier-display'><div class='identifier-display-part'>#{readonly["ref_id"]}</div></div>" %>
-
-        <% if not @archival_object.language.blank? %>
-          <%= readonly.label_and_select "language", readonly.jsonmodel_options_for(:archival_object, "language", true) %>
-        <% end %>
+        <%= readonly.label_and_select "level", readonly.jsonmodel_options_for(:archival_object, "level", true) %>
+        <%= readonly.label_and_textfield "other_level" %>
+        <%= readonly.label_and_select "language", readonly.jsonmodel_options_for(:archival_object, "language", true) %>
 
         <% if not @archival_object.subjects.blank? %>
           <hr/>
